Fix overlapping mainHeader and topHeader divs

--- a/freelance_style.css
+++ b/freelance_style.css
@@ -40,6 +40,7 @@ a:hover, a:active {
     top: 0;
     left: 0;
     right: 0;
+    float: left;
 }
 
 .logo {
@@ -79,6 +80,8 @@ a:hover, a:active {
     background-color: #18bc9c;
     color: #FFFFFF;
     text-align: center;
+    float: left;
+    width: 100%;
 }
 .topHeader img {
     height: 200px;
@@ -167,6 +170,11 @@ ul {
     width: auto;
     height: auto;
     font-size: 19px;
+/*
+    border: 1px solid #000000;
+    border-radius: 5px;
+    padding: 2px 4px;
+*/
 }
 
 
